Upload And Delete File

--- a/Company.Hossam.PL/Company.Hossam.PL.csproj
+++ b/Company.Hossam.PL/Company.Hossam.PL.csproj
@@ -19,4 +19,9 @@
     <ProjectReference Include="..\Company.Hossam.BLL\Company.Hossam.BLL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Files\Images\" />
+    <Folder Include="wwwroot\Files\Videos\" />
+  </ItemGroup>
+
 </Project>
