Add User and Roles Controllers

--- a/Company.Hossam.PL/appsettings.json
+++ b/Company.Hossam.PL/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server = . ; DataBase = HossamCompany ; Trusted_Connection = true ; TrustServerCertificate = true ;"
+    "DefaultConnection": "Server = . ; DataBase = HossamCompany ; Trusted_Connection = true ; TrustServerCertificate = true ; MultipleActiveResultSets=true;"
   }
 }
